# OpenGL

./: .gitignore  CMakeLists.txt  README.md  build.bat
dependencies/: CMakeLists.txt
src/: main.cpp
